--- a/index.html
+++ b/index.html
@@ -255,16 +255,15 @@ document.querySelector('meta[="viewport"]').setAttribute('content', 'width='+sit
 </script>
 
 
-
 <script>
 function searchTable2() {
     var input, filter, found, table, tr, td, i, j;
     input = document.getElementById("myInput");
     filter = input.value.toUpperCase();
     table = document.getElementById("myTable");
-    tr = table.getElementsByTag("tr");
+    tr = table.getElementsByTagName("tr");
     for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTag("td");
+        td = tr[i].getElementsByTagName("td");
         for (j = 0; j < td.length; j++) {
             if (td[j].innerHTML.toUpperCase().indexOf(filter) > -1) {
                 found = true;
