--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@ body {
 </head>
 <body>
 <header>
-
+<script src="https://hy-ebook.github.io/js/x-return-top.min.js">
+</script>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
 <div class="topnav" id="myTopnav">
@@ -442,8 +443,8 @@ function topFunction() {
   document.documentElement.scrollTop = 0;
 }
 </script>
-<!--<script src="https://hy-ebook.github.io/js/x-return-top.min.js">-->
-</script>
+<!--<script src="https://hy-ebook.github.io/js/x-return-top.min.js">
+</script>-->
 
     <footer> 
     
