--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ body {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: red;
+  background-color: #e6e6e6;
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -248,7 +248,7 @@ body {
 <header>
 <script src="https://hy-ebook.github.io/js/x-return-top.min.js">
 </script>
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<button onclick="topFunction()" id="myBtn" title="Go to up">UP</button>
 
 <div class="topnav" id="myTopnav">
   <a href=" " class="active">Harun Yahya</a>
