--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ body {
   border: none;
   outline: none;
   background-color: #e6e6e6;
-  color: white;
+  color: black;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
