--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@ body {
   border: none;
   outline: none;
   background-color: #e6e6e6;
-  color: black;
+  color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: #e6e6e6;
 }
 </style>
 
