--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ body {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #e6e6e6;
-  color: white;
+  background-color: gray;
+  color: black;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
