--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 <style>
-.tftable {font-size:14px;color:#333333;width:70%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;margin-left: auto;margin-right: auto;}
-.tftable th {font-size:13px;background-color:#acc8cc;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;text-align:left;}
-.tftable tr {background-color:#d4e3e5;}
-.tftable td {font-size:14px;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;}
-.tftable tr:hover {background-color:#ffffff;}
+table {font-size:14px;color:#333333;width:70%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;margin-left: auto;margin-right: auto;}
+table th {font-size:13px;background-color:#acc8cc;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;text-align:left;}
+table tr {background-color:#d4e3e5;}
+table td {font-size:14px;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;}
+table tr:hover {background-color:#ffffff;}
 </style>
 
 <style>
