--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@ function topFunction() {
     
     </footer>
 <noscript>
-<img src="https://counter2000.herokuapp.com/ingress/5228309a-8334-491f-a63f-0fd78ef37f80/pixel.gif">
+<img src="https://counter2000.herokuapp.com/ingress/5228309a-8334-491f-a63f-0fd78ef37f80/pixel.gif" alt="HARUN YAHYA" title="counter">
 </noscript>
-<script defer src="https://counter2000.herokuapp.com/ingress/5228309a-8334-491f-a63f-0fd78ef37f80/script.js"></script>
+<script defer src="https://counter2000.herokuapp.com/ingress/5228309a-8334-491f-a63f-0fd78ef37f80/script.js" crossorigin="anonymous"></script>
 
   </body>
 </html>
