--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta ="viewport" content="width=device-width, initial-scale=1">
@@ -250,7 +250,7 @@ body {
 <button onclick="topFunction()" id="myBtn" title="Go to up">UP</button>
 
 <div class="topnav" id="myTopnav">
-  <a href=" " class="active">Harun Yahya</a>
+  <a href=" " class="active"><h1>Harun Yahya</h1></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -258,7 +258,7 @@ body {
 
 <div style="padding-left:16px">
   <h2>Harun Yahya Books</h2>
-  <p>Read Free Online</p>
+  <h3>Read Free Online</h3>
 </div>
 
 <script>
