--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  lang="en" dir="ltr" mozdisallowselectionprint>
   <head>
     <meta charset="utf-8">
-    <meta ="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="google" content="notranslate">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Harun Yahya (Adnan Oktar) Online Free Books</title>
   <meta name="description" content="It Will Change Your View Of Life. Read or Download Books by Harun Yahya. This is a FREE service where you can read our PDF books as a flip online for easy sharing." />
     
