--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Harun Yahya (Adnan Oktar) Online Free Books</title>
   <meta name="description" content="It Will Change Your View Of Life. Read or Download Books by Harun Yahya. This is a FREE service where you can read our PDF books as a flip online for easy sharing." />
     
+  <meta name="ROBOTS" content="INDEX, FOLLOW">
+  <meta name="author" content="HARUN YAHYA">
+  <link rel="shortcut icon" href="/favicon.ico" title="logo" alt="HARUN YAHYA">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, shrink-to-fit=no" />
+  <link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://hy-ebook.github.io/"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 <style>
