--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ body {
 <button onclick="topFunction()" id="myBtn" title="Go to up">UP</button>
 
 <div class="topnav" id="myTopnav">
-  <a href=" " class="active"><h1>Harun Yahya</h1></a>
+  <a href=" " class="active"><h1>READ OR DOWNLOAD</h1></a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
