--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Harun Yahya (Adnan Oktar) Online Free Books</title>
+    <title>Harun Yahya (Adnan Oktar) Online Books</title>
   <meta name="description" content="It Will Change Your View Of Life. Read or Download Books by Harun Yahya. This is a FREE service where you can read our PDF books as a flip online for easy sharing." />
     
   <meta name="ROBOTS" content="INDEX, FOLLOW">
@@ -265,7 +265,7 @@ body {
 
 <div style="padding-left:16px">
   <h2>Harun Yahya Books</h2>
-  <h3>Read Free Online</h3>
+  <h3>Read Online</h3>
 </div>
 
 <script>
