--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Harun Yahya (Adnan Oktar) Online Books</title>
-  <meta name="description" content="It Will Change Your View Of Life. Read or Download Books by Harun Yahya. This is a FREE service where you can read our PDF books as a flip online for easy sharing." />
+  <meta name="description" content="It Will Change Your View Of Life. Read or Download Books by Harun Yahya. This is a FREE service where you can read PDF books as a flip online for easy sharing." />
     
   <meta name="ROBOTS" content="INDEX, FOLLOW">
   <meta name="author" content="HARUN YAHYA">
