--- a/index.html
+++ b/index.html
@@ -577,9 +577,10 @@ function topFunction() {
     
     </footer>
 <noscript>
-<img src="https://counter2000.herokuapp.com/ingress/5228309a-8334-491f-a63f-0fd78ef37f80/pixel.gif" alt="HARUN YAHYA" title="counter">
+    <img src="https://counter2001.herokuapp.com/ingress/f7f40a7f-4a42-40dd-be33-a5486acb6e23/pixel.gif" alt="counter" title="counter">
 </noscript>
-<script defer src="https://counter2000.herokuapp.com/ingress/5228309a-8334-491f-a63f-0fd78ef37f80/script.js" crossorigin="anonymous"></script>
+<script defer src="https://counter2001.herokuapp.com/ingress/f7f40a7f-4a42-40dd-be33-a5486acb6e23/script.js"></script>
+
 
   </body>
 </html>
